--- a/www.nass.gov.ng/d3189371c9f6b6d9d17e90ed15f220a29c1de43c.yml
+++ b/www.nass.gov.ng/d3189371c9f6b6d9d17e90ed15f220a29c1de43c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 00:50:29 GMT
+    - Sun, 18 Jun 2017 01:38:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=EPH2QhP1prdU4M-46be9U1; path=/
+    - PHPSESSID=ZPeJaJAGhy7ZNlN%2CAg-ij0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 00:50:29 GMT
+recorded_at: Sun, 18 Jun 2017 01:38:23 GMT
