--- a/www.nass.gov.ng/c8ee97531e15f0a410f88abc3734d9a4d860eb24.yml
+++ b/www.nass.gov.ng/c8ee97531e15f0a410f88abc3734d9a4d860eb24.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 00:56:10 GMT
+    - Sun, 18 Jun 2017 01:44:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=gilnc7DelRhILL9Lzzh%2Ca2; path=/
+    - PHPSESSID=tWdJsuuBBZReXOCvlnV522; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 00:56:10 GMT
+recorded_at: Sun, 18 Jun 2017 01:44:19 GMT
