--- a/www.nass.gov.ng/3d53824c71aba25dd3d6925f09a8129ea89ec7ae.yml
+++ b/www.nass.gov.ng/3d53824c71aba25dd3d6925f09a8129ea89ec7ae.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 00:59:57 GMT
+    - Sun, 18 Jun 2017 01:47:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=WKkTxdQ1dLsmldxQ4YVpY2; path=/
+    - PHPSESSID=HvJwgwB%2CSe9k4ylEF1UaU0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 00:59:57 GMT
+recorded_at: Sun, 18 Jun 2017 01:47:12 GMT
