--- a/www.nass.gov.ng/4b4cc7333af97a61bb0dd673826033ec6a85253e.yml
+++ b/www.nass.gov.ng/4b4cc7333af97a61bb0dd673826033ec6a85253e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 01:06:40 GMT
+    - Sun, 18 Jun 2017 01:54:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=fMofTfW5GDTd1Kbj9IA8Z2; path=/
+    - PHPSESSID=h2-Di0sTd4gg8%2CORT85IN1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 01:06:40 GMT
+recorded_at: Sun, 18 Jun 2017 01:54:11 GMT
