--- a/www.nass.gov.ng/e028ce3e446d0f58128bad4349b233e70345ee9e.yml
+++ b/www.nass.gov.ng/e028ce3e446d0f58128bad4349b233e70345ee9e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 01:07:40 GMT
+    - Sun, 18 Jun 2017 01:55:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=frNhql45zZ%2CB2r2jbqJtM2; path=/
+    - PHPSESSID=O-3eIvsUpmHkpZEB4tEXI0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 01:07:40 GMT
+recorded_at: Sun, 18 Jun 2017 01:55:04 GMT
