--- a/www.nass.gov.ng/5cbd224ac547e1009c062bc2816066d036080a63.yml
+++ b/www.nass.gov.ng/5cbd224ac547e1009c062bc2816066d036080a63.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 01:08:23 GMT
+    - Sun, 18 Jun 2017 01:56:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=jhMXKF12Yq%2C7VNC-9%2C5%2CD3; path=/
+    - PHPSESSID=q5OAeTw7A%2CqZrw%2CLn8MTL2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 01:08:23 GMT
+recorded_at: Sun, 18 Jun 2017 01:56:17 GMT
