--- a/www.nass.gov.ng/9b2a5910b98bc90583d2bf153496d8f55ffad98e.yml
+++ b/www.nass.gov.ng/9b2a5910b98bc90583d2bf153496d8f55ffad98e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 01:32:57 GMT
+    - Sun, 18 Jun 2017 02:19:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=RRNyxKrgakB26imjYNwRm3; path=/
+    - PHPSESSID=BPnS0qOWH%2C0rDgbl1pY8R0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 01:32:58 GMT
+recorded_at: Sun, 18 Jun 2017 02:19:48 GMT
