--- a/www.nass.gov.ng/2e42359335e885352a35c06c137077b50add1510.yml
+++ b/www.nass.gov.ng/2e42359335e885352a35c06c137077b50add1510.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 01:37:12 GMT
+    - Sun, 18 Jun 2017 02:22:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2K7NBCjR1GGm52H86v9u31; path=/
+    - PHPSESSID=6Tfw1OPoVng9KSR03%2Cex%2C0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 01:37:12 GMT
+recorded_at: Sun, 18 Jun 2017 02:22:48 GMT
