--- a/www.nass.gov.ng/b59a4a3baa7024b19e27b22136ba64f6330e2812.yml
+++ b/www.nass.gov.ng/b59a4a3baa7024b19e27b22136ba64f6330e2812.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 01:43:19 GMT
+    - Sun, 18 Jun 2017 02:28:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Jt%2CgerxoQiKfNaOyjnSub3; path=/
+    - PHPSESSID=H5ZqNo%2CW5CNRYoEXiRRv73; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 01:43:19 GMT
+recorded_at: Sun, 18 Jun 2017 02:28:59 GMT
