--- a/www.nass.gov.ng/07f97841f0cc515a7eafb4df643b1beb7bc2ca44.yml
+++ b/www.nass.gov.ng/07f97841f0cc515a7eafb4df643b1beb7bc2ca44.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 01:47:45 GMT
+    - Sun, 18 Jun 2017 02:33:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=0ikz3xfZ-gIgyA4t%2CKfN92; path=/
+    - PHPSESSID=rP%2C-trYPUMLB8yW4oluZZ3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 01:47:45 GMT
+recorded_at: Sun, 18 Jun 2017 02:33:36 GMT
