--- a/www.nass.gov.ng/90ac8575dbc443d582d2dec000b26bbf2a8aa6bb.yml
+++ b/www.nass.gov.ng/90ac8575dbc443d582d2dec000b26bbf2a8aa6bb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 01:55:53 GMT
+    - Sun, 18 Jun 2017 02:40:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=SkH%2Cz3eHfu-rBtBwTtPlb2; path=/
+    - PHPSESSID=2XQ34kg6l8pcLMz4rc-CI0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 01:55:53 GMT
+recorded_at: Sun, 18 Jun 2017 02:40:53 GMT
