--- a/www.nass.gov.ng/519b6c9296ccae7e26e98273a88ecbd32f03a34e.yml
+++ b/www.nass.gov.ng/519b6c9296ccae7e26e98273a88ecbd32f03a34e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 02:02:11 GMT
+    - Sun, 18 Jun 2017 02:48:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=HEIHPX4Dhz6Nz7W9D6%2C3z0; path=/
+    - PHPSESSID=Qp5drsrjfbNgCUrOj1In51; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 02:02:11 GMT
+recorded_at: Sun, 18 Jun 2017 02:48:29 GMT
