--- a/www.nass.gov.ng/c0cf0551b470d3720a59c389ad33898ac6e75aff.yml
+++ b/www.nass.gov.ng/c0cf0551b470d3720a59c389ad33898ac6e75aff.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 02:03:33 GMT
+    - Sun, 18 Jun 2017 02:49:13 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=w52Cca1CDiYlk6Fx6GnkY1; path=/
+    - PHPSESSID=HmIzwBli%2Cn--250eYGEI70; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 02:03:33 GMT
+recorded_at: Sun, 18 Jun 2017 02:49:13 GMT
