--- a/www.nass.gov.ng/878c44011fe1e758f39e66198b03c938da1c2f3a.yml
+++ b/www.nass.gov.ng/878c44011fe1e758f39e66198b03c938da1c2f3a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 02:07:45 GMT
+    - Sun, 18 Jun 2017 02:53:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=M7i65JYpkC6TLLIJ1EAxg0; path=/
+    - PHPSESSID=G%2CjCo1uO-lW04xxXPmm3w1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 02:07:45 GMT
+recorded_at: Sun, 18 Jun 2017 02:53:36 GMT
