--- a/www.nass.gov.ng/d872f8c59b68f74472849cbddab2eaeab7fcfe4f.yml
+++ b/www.nass.gov.ng/d872f8c59b68f74472849cbddab2eaeab7fcfe4f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 02:19:46 GMT
+    - Sun, 18 Jun 2017 03:06:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=vO0vUbJwCKOdpUE%2CfoaLa1; path=/
+    - PHPSESSID=nI4G-o6DiNR4Ssdw4BYhi0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 02:19:46 GMT
+recorded_at: Sun, 18 Jun 2017 03:06:18 GMT
