--- a/www.nass.gov.ng/7309f4eae43aefa4e9ddc492b9f25795b65dd27c.yml
+++ b/www.nass.gov.ng/7309f4eae43aefa4e9ddc492b9f25795b65dd27c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 02:20:36 GMT
+    - Sun, 18 Jun 2017 03:06:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=XixW0n9RX5KYg5rXDT%2Cck0; path=/
+    - PHPSESSID=ajSeOQpOXohCkkQSQojVU2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 02:20:36 GMT
+recorded_at: Sun, 18 Jun 2017 03:06:44 GMT
