--- a/www.nass.gov.ng/855e1fb217834cd93de3084c6e0930b0673eb509.yml
+++ b/www.nass.gov.ng/855e1fb217834cd93de3084c6e0930b0673eb509.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 02:21:23 GMT
+    - Sun, 18 Jun 2017 03:07:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=uMIEGDs6%2Cud6HZOeWfxnx1; path=/
+    - PHPSESSID=eaBWNEIlGKKFsef8Ygtjt1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 02:21:24 GMT
+recorded_at: Sun, 18 Jun 2017 03:07:40 GMT
