--- a/www.nass.gov.ng/dc2d9fc9a02f9dd8b65b11211e75f2a9e4c99863.yml
+++ b/www.nass.gov.ng/dc2d9fc9a02f9dd8b65b11211e75f2a9e4c99863.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 02:24:17 GMT
+    - Sun, 18 Jun 2017 03:10:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=J%2CCcwbvtdpmjUwMY6Stm71; path=/
+    - PHPSESSID=ZHV-m8kts7i62Ocg-tHJ41; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 02:24:17 GMT
+recorded_at: Sun, 18 Jun 2017 03:10:57 GMT
