--- a/www.nass.gov.ng/56f5baefebb221b5d6da111296808311877e46cb.yml
+++ b/www.nass.gov.ng/56f5baefebb221b5d6da111296808311877e46cb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 02:27:19 GMT
+    - Sun, 18 Jun 2017 03:14:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-7owSEGArGehNkUX5V6GQ1; path=/
+    - PHPSESSID=nUjGOsPsh2rw0tYjFHD%2C%2C1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 02:27:19 GMT
+recorded_at: Sun, 18 Jun 2017 03:15:00 GMT
