--- a/www.nass.gov.ng/6131c82ed21fb0b52fa3dd28d089a338c5d8a9a0.yml
+++ b/www.nass.gov.ng/6131c82ed21fb0b52fa3dd28d089a338c5d8a9a0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 17 Jun 2017 22:34:31 GMT
+    - Sun, 18 Jun 2017 16:17:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Tm7%2CtchDTbuxOsrqAZ49k2; path=/
+    - PHPSESSID=i7QYGpnvF%2C7aX8%2CbMrpTK1; path=/
     Vary:
     - Accept-Encoding
     Transfer-Encoding:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 17 Jun 2017 22:34:32 GMT
+recorded_at: Sun, 18 Jun 2017 16:17:43 GMT
