--- a/www.nass.gov.ng/758abe4384162d010bb84dbb07e3ead8c4ab22ed.yml
+++ b/www.nass.gov.ng/758abe4384162d010bb84dbb07e3ead8c4ab22ed.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 17 Jun 2017 22:44:41 GMT
+    - Sun, 18 Jun 2017 16:27:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Vdn4mI%2CbfX35YGmq1PYEe2; path=/
+    - PHPSESSID=BhhfRb-o5kX9d58IfM52k0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 17 Jun 2017 22:44:41 GMT
+recorded_at: Sun, 18 Jun 2017 16:27:04 GMT
