--- a/www.nass.gov.ng/7f12cf3bc6c4e05b09079445285be49b827e0b8a.yml
+++ b/www.nass.gov.ng/7f12cf3bc6c4e05b09079445285be49b827e0b8a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 17 Jun 2017 22:47:00 GMT
+    - Sun, 18 Jun 2017 16:29:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=VbML7xCK9Mh-k2QyqRE-03; path=/
+    - PHPSESSID=p1VSpm9l%2CKl%2CC-Zkmmfv20; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 17 Jun 2017 22:47:00 GMT
+recorded_at: Sun, 18 Jun 2017 16:29:29 GMT
