--- a/www.nass.gov.ng/78b5cc45043355743d033ce7d5cf2ad81ae260f0.yml
+++ b/www.nass.gov.ng/78b5cc45043355743d033ce7d5cf2ad81ae260f0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 17 Jun 2017 22:51:07 GMT
+    - Sun, 18 Jun 2017 16:35:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Jzb-PfeBQAv5tbJUckZcm2; path=/
+    - PHPSESSID=QexKP%2CmSedaUpRg0kHHis3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 17 Jun 2017 22:51:07 GMT
+recorded_at: Sun, 18 Jun 2017 16:35:17 GMT
