--- a/www.nass.gov.ng/ad849c4aef002b327d1deac9829287d1bcb83853.yml
+++ b/www.nass.gov.ng/ad849c4aef002b327d1deac9829287d1bcb83853.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 17 Jun 2017 22:56:16 GMT
+    - Sun, 18 Jun 2017 16:39:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hENN8offQ15DgdA5haTm60; path=/
+    - PHPSESSID=PNh10fV8%2CyQo4Vb61zDGM3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 17 Jun 2017 22:56:16 GMT
+recorded_at: Sun, 18 Jun 2017 16:39:21 GMT
