--- a/www.nass.gov.ng/457809eb623ffe3f8fdef5bbf80388e8191b0853.yml
+++ b/www.nass.gov.ng/457809eb623ffe3f8fdef5bbf80388e8191b0853.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 17 Jun 2017 22:57:21 GMT
+    - Sun, 18 Jun 2017 16:40:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=LHTqbUe8tFXJRMSfy9gEx2; path=/
+    - PHPSESSID=bsLn66ohhg%2CUb9ReId4no0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 17 Jun 2017 22:57:21 GMT
+recorded_at: Sun, 18 Jun 2017 16:40:58 GMT
