--- a/www.nass.gov.ng/9263d9809c1aa176fe3d8f94dfc09842e30fdac6.yml
+++ b/www.nass.gov.ng/9263d9809c1aa176fe3d8f94dfc09842e30fdac6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 17 Jun 2017 23:02:23 GMT
+    - Sun, 18 Jun 2017 16:46:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=5rG8WXwHTQ4QSfMUU7W8c0; path=/
+    - PHPSESSID=kSo8C%2CZzFpiedBjp48oV30; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 17 Jun 2017 23:02:23 GMT
+recorded_at: Sun, 18 Jun 2017 16:46:44 GMT
