--- a/www.nass.gov.ng/a66fb42bd0331ad278b4ad66546632d70814742e.yml
+++ b/www.nass.gov.ng/a66fb42bd0331ad278b4ad66546632d70814742e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 17 Jun 2017 23:02:41 GMT
+    - Sun, 18 Jun 2017 16:47:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=zbFffpCRvP7uAO3y%2CxU-Z1; path=/
+    - PHPSESSID=-V8qb0Rn8v9XYjLwgEwa93; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 17 Jun 2017 23:02:41 GMT
+recorded_at: Sun, 18 Jun 2017 16:47:12 GMT
