--- a/www.nass.gov.ng/bc55340c5441223b2b9461f9825a8ca5ec2203da.yml
+++ b/www.nass.gov.ng/bc55340c5441223b2b9461f9825a8ca5ec2203da.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 17 Jun 2017 23:07:07 GMT
+    - Sun, 18 Jun 2017 16:51:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=M9ouOTrb8gDFdWLDD7TS-0; path=/
+    - PHPSESSID=VSJgGwHefpbzinS%2CVFF3j2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 17 Jun 2017 23:07:07 GMT
+recorded_at: Sun, 18 Jun 2017 16:51:51 GMT
